--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/main.css">
 </head>
-<body>
-    <h1 class="text-center">Grilled Cheese</h1>
-    <div class="container">
-        <div class="row">
-            <div id="bread-container" class="col-12"></div>
+<body class="container">
+    <h1 class="text-center">Grilled Cheese Maker</h1>
+    <div class="row">
+        <div class="col-6 prep-table p-2">
+            <h4 class="text-center">Breads:</h4>
+            <div id="bread-container" class="d-flex justify-content-center"></div>
+            <h4 class="text-center">Cheeses:</h4>
+            <div id="cheese-container" class="d-flex justify-content-center"></div>
         </div>
-        <div class="row">
-            <div id="cheese-container" class="col-12"></div>
+        <div class="col-6 sandwich-table p-2">
+            <div id="sandwich=container"></div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
